--- a/text-formating/src/app/modules/home/components/formatter/formatter.component.html
+++ b/text-formating/src/app/modules/home/components/formatter/formatter.component.html
@@ -1,6 +1,8 @@
 <div class="count mb-3">
-    <div>Word Count : 11 Words</div>
-    <div>Char Count : 22 Words</div>
+    <div>Word Count : {{word_count}}</div>
+    <div>Char Count : {{char_count}}</div>
+
+<!-- {{text1}} -->
 </div>
 
 <div>
