--- a/text-formating/src/app/modules/home/components/text-display/text-display.component.html
+++ b/text-formating/src/app/modules/home/components/text-display/text-display.component.html
@@ -6,9 +6,9 @@
 <div class="mb-3 bg-light h-25 p-2">
     <!-- <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label> -->
     <!-- /<textarea class="form-control" id="exampleFormControlTextarea2" rows="3" placeholder="Output Text:-"></textarea> -->
-     <div>{{name}}</div>
-</div>
+    <div class="remove-style"[ngStyle]="stylethis">{{result}}</div>
 
+</div>
 <!-- <button class="btn btn-primary" (click) = "display()">Click</button> -->
 
 
