--- a/text-formating/src/app/modules/home/home.component.html
+++ b/text-formating/src/app/modules/home/home.component.html
@@ -2,10 +2,10 @@
 
 <div class=" mt-3 d-flex justify-content-between">
     <div class="text-display bg-color p-3">
-        <app-text-display></app-text-display>
+        <app-text-display [item] = "btn_class"></app-text-display>
     </div>
 
     <div class="formatter border p-3 bg-color">
-        <app-formatter></app-formatter>
+        <app-formatter (updateDataEvent) = "updateData($event)"></app-formatter>
     </div>
 </div>
