--- a/text-formating/src/app/modules/userdata/userdata.component.html
+++ b/text-formating/src/app/modules/userdata/userdata.component.html
@@ -1,1 +1,79 @@
-<p>userdata works!</p>
+<!-- <p>userdata works!</p>
+
+<div class="container">
+  <h2>User Data Form</h2>
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="fname">First Name:</label>
+      <input id="fname" formControlName="fname" class="form-control" placeholder="Enter first name">
+    </div>
+    <div class="form-group">
+      <label for="lname">Last Name:</label>
+      <input id="lname" formControlName="lname" class="form-control" placeholder="Enter last name">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div> -->
+
+
+<div class=" d-flex justify-content-center">
+  <div class="w-50">
+    <div class="text-center fs-3 formtitle">Add Database Entry</div>
+    <div class="">
+      <form [formGroup]="signup" (ngSubmit)="onSubmit()" class="border border-black p-4">
+        <div class="mb-3">
+          <label for="dbname" class="form-label">Database Name</label>
+          <input type="text" class="form-control" formControlName="dbname" id="dbname" placeholder="Enter Database Name">
+          <div class="text-danger" *ngIf="signup.get('dbname')?.errors?.['required']">
+            Database Name is required.
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="portnumber" class="form-label">Port Number</label>
+          <input type="number" class="form-control" formControlName = "portnumber" id="portnumber" placeholder="Port Number">
+          <div class="text-danger" *ngIf="signup.get('portnumber')?.errors?.['required']">
+            Port number is required.
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="dbpassword" class="form-label">Password</label>
+          <input type="password" class="form-control" formControlName = "dbpassword"  id="dbpassword" placeholder="Password">
+          <div class="text-danger" *ngIf="signup.get('dbpassword')?.errors?.['required']">
+            Password is required.
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="dburl" class="form-label">Database Url</label>
+          <input type="url" class="form-control" formControlName = "dburl" id="dburl" placeholder="URL">
+          <div class="text-danger" *ngIf="signup.get('dburl')?.errors?.['required']">
+            URL is required.
+          </div>
+        </div>
+        <div class="text-center">
+          <button type="reset" class="btn btn-secondary">Cancel</button>
+          <button type="submit" class="btn btn-secondary ms-3" [disabled] = "!signup.valid">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+ <div class="justify-content-center text-align-center row">
+  <div  class="col-12"><div class="w-50 m-auto my-2">Entries:</div></div>
+  <div class="border border-black rounded p-4 col-12 w-50">
+    <div class="mt-3">
+    
+      <div *ngFor="let form of storedForms" class="stored-form">
+        <p><strong>Database Name:</strong> {{ form.dbname }}</p>
+        <p><strong>Port Number:</strong> {{ form.portnumber }}</p>
+        <p><strong>Database URL:</strong> {{ form.dburl }}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="w-100">
+  
+</div>
+
