--- a/text-formating/src/app/app.component.html
+++ b/text-formating/src/app/app.component.html
@@ -13,6 +13,7 @@
         <div class="navbar-nav ms-auto">
           <a class="nav-link active" aria-current="page" routerLink="" routerLinkActive="active">Home</a>
           <a class="nav-link" routerLink="/userdata" routerLinkActive="active" ariaCurrentWhenActive="page">User Form</a>
+          <a class="nav-link" routerLink="/apis" routerLinkActive="active" ariaCurrentWhenActive="page">API's</a>
         </div>
       </div>
     </div>
