--- a/text-formating/src/app/app.component.html
+++ b/text-formating/src/app/app.component.html
@@ -11,7 +11,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link active" aria-current="page" routerLink="" routerLinkActive="active">Home</a>
+          <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">Home</a>
           <a class="nav-link" routerLink="/userdata" routerLinkActive="active" ariaCurrentWhenActive="page">User Form</a>
           <a class="nav-link" routerLink="/apis" routerLinkActive="active" ariaCurrentWhenActive="page">API's</a>
         </div>
