--- a/text-formating/src/app/modules/apiscomponent/apiscomponent.component.html
+++ b/text-formating/src/app/modules/apiscomponent/apiscomponent.component.html
@@ -23,9 +23,9 @@
                 <button id = "todos" class = "btn btn-secondary w-50 ms-4" type="button" (click) = "getbtn($event)">Todos</button>
             </div>
             <div class="mt-3 d-flex justify-content-between p-3">
-                <button class="w-25 btn crud">Delete</button>
-                <button class="w-25 btn crud">Update</button>
-                <button class="w-25 btn crud">Create</button>
+                <button id = "deletebtn" class="w-25 btn crud" type="button" (click) = "operations($event)">Delete</button>
+                <button id = "updatebtn" class="w-25 btn crud" type="button" (click) = "operations($event)">Update</button>
+                <button id = "createbtn" class="w-25 btn crud" type="button" (click) = "operations($event)">Create</button>
             </div>
             <div class="d-flex align-items-center">
               <span class="me-3">Input Body :-</span><input [(ngModel)] = "id" type="text" class="form-control bg-white p-1 w-50">
