--- a/text-formating/src/app/modules/apiscomponent/apiscomponent.component.html
+++ b/text-formating/src/app/modules/apiscomponent/apiscomponent.component.html
@@ -28,7 +28,8 @@
                 <button id = "createbtn" class="w-25 btn crud" type="button" (click) = "operations($event)">Create</button>
             </div>
             <div class="d-flex align-items-center">
-              <span class="me-3">Input Body :-</span><input [(ngModel)] = "id" type="text" class="form-control bg-white p-1 w-50">
+              <span class="me-3">Input Body :-</span>
+              <input [(ngModel)] = "input_body" type="text" class="form-control bg-white p-1 w-50">
             </div>
         </div>
         <div class="col-md-8 ">
