--- a/text-formating/src/app/modules/home/components/formatter/formatter.component.html
+++ b/text-formating/src/app/modules/home/components/formatter/formatter.component.html
@@ -38,7 +38,7 @@
         </button>
 
         <button class="btn">
-            <input type="color" id="favcolor" name="favcolor" value="#ff0000" class="border" (click) = getId($event)>
+            <input type="color" id="favcolor" name="favcolor" value="black" class="border" (input) = getId($event)>
         </button>
 
         <button class="btn border" id = "increasesizebtn" (click) = "getId($event)">
