--- a/text-formating/src/app/modules/apiscomponent/apiscomponent.component.html
+++ b/text-formating/src/app/modules/apiscomponent/apiscomponent.component.html
@@ -35,51 +35,7 @@
         <div class="col-md-8 ">
             <div class="response-data border bg-white p-2">Response Data
 
-                <div *ngIf = "btn_value == 'comments'">
-
-                    <div *ngFor = "let item of info | keyvalue">
-                        <table class="table">
-                            <tr>
-                                <th>{{item.key}}</th>
-                            </tr>
-                            <tr>
-                                <td>{{item.value}}</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-
-                <div *ngIf = "method">
-
-                  <div *ngFor = "let item of info | keyvalue">
-                      <table class="table">
-                          <tr>
-                              <th>{{item.key}}</th>
-                          </tr>
-                          <tr>
-                              <td>{{item.value}}</td>
-                          </tr>
-                      </table>
-                  </div>
-              </div>
-
-                <div *ngIf = "btn_value == 'albums'">
-                    <div *ngFor = "let item of info | keyvalue">
-                        <table class="table">
-                            <tr>
-                                <th>{{item.key}}</th>
-                            </tr>
-                            <tr>
-                                <td>{{item.value}}</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <!-- <div>{{info.userid}}</div>
-                    <div>{{info.id}}</div>
-                    <div>{{info.title}}</div> -->
-                </div>
-
-                <div *ngIf = "btn_value == 'photos'">
+                <div *ngIf = "info">
                     <div *ngFor = "let item of info | keyvalue">
                         <table class="table">
                             <tr>
@@ -96,20 +52,6 @@
                     <div><img src="{{info.url}}" alt=""></div>
                 </div>
 
-                <div *ngIf = "btn_value == 'todos'">
-                    <div *ngFor = "let item of info | keyvalue">
-                        <table class="table">
-                            <tr>
-                                <th>{{item.key}}</th>
-                            </tr>
-                            <tr>
-                                <td>{{item.value}}</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <!-- <div>{{info.id}}</div>
-                    <div>{{info.title}}</div> -->
-                </div>
             </div>
         </div>
     </div>
