--- a/text-formating/src/app/app.component.html
+++ b/text-formating/src/app/app.component.html
@@ -14,6 +14,7 @@
           <a class="nav-link" aria-current="page" routerLink="" routerLinkActive="active">Home</a>
           <a class="nav-link" routerLink="/userdata" routerLinkActive="active" ariaCurrentWhenActive="page">User Form</a>
           <a class="nav-link" routerLink="/apis" routerLinkActive="active" ariaCurrentWhenActive="page">API's</a>
+          <a class="nav-link" routerLink="/highcharts" routerLinkActive="active" ariaCurrentWhenActive="page">Highcharts</a>
         </div>
       </div>
     </div>
