--- a/text-formating/src/app/modules/highcharts/highcharts.component.html
+++ b/text-formating/src/app/modules/highcharts/highcharts.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5 height-set">
   <div class="row">
     <div class="col-md-2 border p-3 navbar-bg-color">
       <ul class="nav flex-column border bg-light p-1">
