Assignment 4 all completed

--- a/text-formating/src/app/modules/highcharts/highcharts.component.html
+++ b/text-formating/src/app/modules/highcharts/highcharts.component.html
@@ -34,7 +34,7 @@
           <div *ngIf="show == false; else elseBlock">{{initalMessage}}</div>
           <ng-template #elseBlock></ng-template>
           <div>
-            <div id = "container"></div>
+            <div id = "container" class="p-4"></div>
           </div>
         </div>
     </div>
