changes has done

--- a/text-formating/src/app/app.component.html
+++ b/text-formating/src/app/app.component.html
@@ -15,6 +15,7 @@
           <a class="nav-link" routerLink="/userdata" routerLinkActive="active" ariaCurrentWhenActive="page">User Form</a>
           <a class="nav-link" routerLink="/apis" routerLinkActive="active" ariaCurrentWhenActive="page">API's</a>
           <a class="nav-link" routerLink="/highcharts" routerLinkActive="active" ariaCurrentWhenActive="page">Highcharts</a>
+          <a class="nav-link" routerLink="/gojs" routerLinkActive="active" ariaCurrentWhenActive="page">GoJs</a>
         </div>
       </div>
     </div>
