--- a/text-formating/src/app/modules/home/components/text-display/text-display.component.html
+++ b/text-formating/src/app/modules/home/components/text-display/text-display.component.html
@@ -3,8 +3,12 @@
 </div>
 
 <div class="mb-3 bg-light h-25 p-2">
-    <div [ngStyle]="stylethis">{{result}}</div>
+    <div [ngStyle]="stylethis" *ngIf="specialcharRemove;else elseBlock">{{result | specialcharremove}}</div>
 </div>
+
+<ng-template #elseBlock>
+  <div [ngStyle]="stylethis">{{result}}</div>
+</ng-template>
 
 
 
